--- a/Muhamed-Nagai.css
+++ b/Muhamed-Nagai.css
@@ -13,7 +13,7 @@
 
  :root {
      /* DYNAMIC BACKGROUND SYSTEM */
-     --app-bg: url('https://i.ibb.co/rGdtvG1M/Nagai.png');
+     --app-bg: url('https://i.pinimg.com/736x/01/b1/ab/01b1abeab671a1eaf7a59dbea5188c31.jpg');
      --app-blur: 10px;
      --app-margin: 15px;
      --app-radius: 10px;
